# exif_cleaner

./: .gitignore  README.md  justfile  main.py  pyproject.toml  settings.py
app/: main.py
app/scr/: __init__.py  services.py
app/scr/helpers/: __init__.py  cli_options.py  decorator.py  exif_cleaner.py  file_manager.py  get_params.py  types.py
app/settings/: __init__.py  configs.py  logger.py  logger.yaml
cleaner/: __main__.py
cleaner/settings/: __init__.py  configs.py  logger.py  logger.yaml
cleaner/src/: __init__.py  app.py  services.py
cleaner/src/helpers/: __init__.py  cli_options.py  decorator.py  exif_cleaner.py  file_manager.py  types.py
scr/: decorator.py  get_params.py  helper.py
