[tool.poetry]
name = "python-exif-cleaner"
version = "1.0.0"
description = ""
authors = ["mrKazzila <mrkazzila@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.0.0"
pillow-heif = "^0.13.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.289"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
show-fixes = true
line-length = 120
src = ["src"]
exclude = [
    ".venv",
    ".git",
    ".ruff_cache",
]
select = [
    "G001",                 # flake8-logging-format
    "F",                    # Pyflakes
    "E", "W",               # Pycodestyle
    "I",                    # isort
    "N",                    # pep8-naming
    "ANN",                  # flake8-annotations
    "COM",                  # flake8-commas
    "C4",                   # flake8-comprehensions
    "Q",                    # flake8-quotes
    "D101", "D102", "D103", # pydocstyle
    "D201", "D202", "D204",
    "D213", "D300", "D419",
]
ignore = []

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"
multiline-quotes = "double"

[tool.ruff.flake8-annotations]
allow-star-arg-any = true
